consul/server/consul-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-ui
  namespace: public-service
  labels:
    app: consul
    component: server
spec:
  selector:
    app: consul
  ports:
    - name: http
      port: 80
      targetPort: 8500
